--- a/latest.ipynb
+++ b/latest.ipynb
@@ -53,7 +53,8 @@
         "\t# plot raw pixel data\n",
         "\tpyplot.imshow(trainX[i])\n",
         "# show the figure\n",
-        "pyplot.show()"
+        "pyplot.show()\n",
+        "#hello"
       ],
       "execution_count": 0,
       "outputs": [
